SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    1 May 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140501
Tag Summary: Add default values to ecosys and ecosys_parms namelist variables
             (for documentation). Note that this still needs variable
             descriptions.

Files Modified:
M       bld/namelist_files/namelist_definition_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  klindsay, mlevy
Tag Date:    29 Apr 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140429
Tag Summary: Add support for RCP4.5 and RCP8.5 ocean transients and set
             namelist defaults for BRCP45BDRD, BRCP85BDRD, and BRCP85BPRP
             compsets

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  njn01, mlevy
Tag Date:    20 Apr 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140420a
Tag Summary: Update restart.F90 to allow POP to right restart mid-day

Files Modified:
M       source/restart.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    20 Apr 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140420
Tag Summary: Cleaned up whitespace in pop2.buildnml.csh (proper indentation to
             make script easier to read)

Files Modified:
M       bld/pop2.buildnml.csh
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, thoar
Tag Date:    14 Mar 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140314
Tag Summary: There was some un-necessary code for handling rpointer files in
             multi-instance cases. This tag also cleans up how the variable