@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  mlevy, klindsay
+Tag Date:    7 May 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140507
+Tag Summary: "if (b4b_flag)" was being used rather than "if (.not. b4b_flag)"
+             in 3 places leading to the wrong global reduction being used
+
+Files Modified:
+M       mpi/global_reductions.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mlevy
 Tag Date:    1 May 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140501
